[package]
name = "osmchangeset2csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.15", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
csv = "1.2.2"
env_logger = "0.10.0"
indicatif = "0.17.5"
log = "0.4.19"
osmio = "0.7.0"
read-progress = "0.3.0"
tokio = { version = "1.29.1", features = ["full"] }

[patch.crates-io]
osmio = { path = "/home/amanda/personal/osmio/" }
read-progress = { path = "/home/amanda/personal/read-progress-rs/" }

[profile.release]
debug = 1
