[package]
name = "osmchangeset2csv"
version = "0.1.0"
edition = "2021"
authors = ["Amanda McCann <amanda@technomancy.org>"]
license = "AGPL-3.0+"
repository = "https://github.com/amandasaurus/osmchangeset2csv"
description = "Convert OpenStreetMap changeset dumps to CSV"
keywords = ["openstreetmap", "osm", "csv"]


[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.15", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
csv = "1.2.2"
env_logger = "0.10.0"
indicatif = "0.17.5"
log = "0.4.19"
osmio = "0.8.1"
read-progress = "0.5.0"
tokio = { version = "1.29.1", features = ["full"] }
